--- a/quantum/src/components/Dashboard/Dashboard.css
+++ b/quantum/src/components/Dashboard/Dashboard.css
@@ -85,7 +85,7 @@
 .card {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 270px 0px;
+  grid-template-rows: 2px 270px 0px;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
   background-color: white;
@@ -145,4 +145,42 @@
   align-items: center;
   margin: 10px;
   padding: 10px;
+}
+.c-expire {
+  background-color: rgba(255, 228, 230, 1);
+  color: rgba(216, 0, 0, 1);
+  font-size: 10px;
+  width: 7%;
+  height: 15px;
+  margin-top: -20px;
+  margin-left: -10px;
+}
+.c-expire > p {
+  margin: 0px;
+  padding: 1.5px 3px;
+}
+@media screen and (max-width: 769px) {
+  .db-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(238, 238, 238, 1);
+    padding: 50px 0px;
+  }
+  .cc {
+    width: 90%;
+  }
+  .sortcc {
+    width: 90%;
+  }
+  .cardscc {
+    width: 90%;
+  }
+  .card {
+    width: 100%;
+  }
+  .c-expire {
+    width: 8%;
+  }
 }
