--- a/quantum/src/components/Footer/Footer.css
+++ b/quantum/src/components/Footer/Footer.css
@@ -1,30 +1,33 @@
 .footer-body {
-  background-color: rgba(224, 225, 225, 1);
+  background-color: rgb(224, 225, 225);
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
 }
+
 .footer-links {
   margin-top: -45px;
   width: 130px;
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  flex-direction: row;
 }
+
 .copyright {
   width: 40%;
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  flex-direction: row;
   font-size: 14px;
-  color: rgba(97, 97, 97, 1);
+  color: rgb(97, 97, 97);
 }
+
 @media screen and (max-width: 769px) {
   .copyright {
     width: 60%;
     font-size: 10px;
   }
-}
+}/*# sourceMappingURL=Footer.css.map */
