--- a/quantum/src/components/Header/Header.scss
+++ b/quantum/src/components/Header/Header.scss
@@ -1,47 +1,44 @@
+@import "../../scss-variable/variables";
 .header-body {
-  background-image: linear-gradient(rgba(37, 49, 63, 0.5), rgba(37, 49, 63, 0.5)), url("../../assets/headerpatternimage.png");
+  background-image: linear-gradient(
+      rgba(37, 49, 63, 0.5),
+      rgba(37, 49, 63, 0.5)
+    ),
+    url("../../assets/headerpatternimage.png");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 1;
-  box-shadow: inset 0px -3px 0 0px rgb(49, 185, 228);
+  box-shadow: inset 0px -3px 0 0px rgb(49 185 228);
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
-
 .header-logo {
   width: 20%;
   padding: 20px 50px;
 }
-
 .header-links {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  @include flexSpaceAroundCenter();
 }
-
 .header-link {
-  font-size: 14px;
-  color: rgb(63, 210, 139);
+  font-size: $_14pxfont;
+  color: $headerlinkscolor;
 }
-
 .avatar-img {
   border-radius: 50%;
-  border: 2px solid rgb(63, 210, 139);
+  border: 2px solid $headerlinkscolor;
 }
-
 .alerticon {
   position: relative;
   display: inline-block;
 }
-
 .alertnumber {
   color: white;
-  background-color: rgb(42, 127, 243);
+  background-color: rgba(42, 127, 243, 1);
   border-radius: 50%;
-  font-size: 12px;
+  font-size: $_12pxfont;
   text-align: center;
   position: absolute;
   top: -20px;
@@ -49,17 +46,15 @@
   width: 15px;
   height: 15px;
 }
-
 .announcementicon {
   position: relative;
   display: inline-block;
 }
-
 .announcementnumber {
   color: white;
-  background-color: rgb(42, 127, 243);
+  background-color: rgba(42, 127, 243, 1);
   border-radius: 50%;
-  font-size: 12px;
+  font-size: $_12pxfont;
   text-align: center;
   position: absolute;
   top: -20px;
@@ -67,18 +62,16 @@
   width: 15px;
   height: 15px;
 }
-
 .avatar {
   position: relative;
   display: inline-block;
 }
-
 .avatartext {
   background-color: white;
-  color: rgb(34, 34, 34);
+  color: rgba(34, 34, 34, 1);
   border-radius: 50%;
   border: 1px solid black;
-  font-size: 12px;
+  font-size: $_12pxfont;
   text-align: center;
   position: absolute;
   top: -15px;
@@ -86,11 +79,9 @@
   width: 15px;
   height: 15px;
 }
-
 .hamburger {
   display: none;
 }
-
 @media screen and (max-width: 769px) {
   .header-logo {
     width: 30%;
@@ -114,4 +105,4 @@
   .hamburger {
     display: block;
   }
-}/*# sourceMappingURL=Header.css.map */
+}
