Dashboard Data JSON and style edited

--- a/quantum/src/components/Dashboard/Dashboard.scss
+++ b/quantum/src/components/Dashboard/Dashboard.scss
@@ -106,6 +106,7 @@
   flex-direction: row;
   font-size: 20px;
   color: rgba(34, 34, 34, 1);
+  width: 90%;
 }
 .card-subject {
   font-size: $_12pxfont;
