create user step1 page done

--- a/angular/quantum-angular/src/app/components/login/login.component.html
+++ b/angular/quantum-angular/src/app/components/login/login.component.html
@@ -36,10 +36,11 @@
             Not registered yet?
         </div>
         <div class="create-account">
-            CREATE AN ACCOUNT
+            <a routerLink="/signup" routerLinkActive="active" ariaCurrentWhenActive="page">CREATE AN ACCOUNT</a>
         </div>
     </form>
     <div class="contact">
         About <span style="color: rgba(0, 0, 0, 0.12);">|</span> Contact Us
     </div>
 </div>
+<router-outlet></router-outlet>
