--- a/angular/quantum-angular/src/app/components/login/login.component.scss
+++ b/angular/quantum-angular/src/app/components/login/login.component.scss
@@ -47,6 +47,7 @@
   font-size: 16px;
   border: none;
   border-bottom: solid 1px rgba(0, 0, 0, 0.12);
+  font-family: inherit;
 }
 
 .forgot-email {
@@ -78,6 +79,7 @@
   font-size: 16px;
   border: none;
   border-bottom: solid 1px rgba(0, 0, 0, 0.12);
+  font-family: inherit;
 }
 .preview {
   margin-top: -3px;
@@ -121,7 +123,8 @@
   font-size: 12px;
 }
 
-.create-account {
+.create-account > a {
+  text-decoration: none;
   margin-top: 4px;
   font-size: 14px;
   color: rgba(31, 122, 84, 1);
