--- a/angular/quantum-angular/src/scss-var/_variables.scss
+++ b/angular/quantum-angular/src/scss-var/_variables.scss
@@ -28,3 +28,8 @@
   justify-content: space-around;
   align-items: center;
 }
+@mixin flexCenterStretch() {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+}
