--- a/angular/quantum-angular/src/app/components/signup/signup.component.html
+++ b/angular/quantum-angular/src/app/components/signup/signup.component.html
@@ -1,3 +1,4 @@
-<app-navbar></app-navbar>
-<app-step1></app-step1>
-<router-outlet></router-outlet>
+<div class="signup">
+    <app-signup-navbar></app-signup-navbar>
+    <app-signup-form></app-signup-form>
+</div>
