--- a/angular/quantum-angular/src/app/components/signup/signup-navbar/signup-navbar.component.scss
+++ b/angular/quantum-angular/src/app/components/signup/signup-navbar/signup-navbar.component.scss
@@ -1,8 +1,6 @@
-@import "../../../../scss-var/variables";
-
 .navbar {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../../../../assets/headerpatternimg.png");
+    url("../../../../assets/header\ pattern\ image.png");
   border-bottom: solid 2px rgba(36, 165, 215, 1);
   width: 100%;
 }
@@ -19,7 +17,7 @@
   grid-row-gap: 0px;
   background-color: rgba(60, 78, 98, 1);
   align-items: center;
-  padding: 10px 8px 10px 28px;
+  padding: 10px 24px 10px 28px;
 }
 
 .text {
@@ -32,26 +30,6 @@
   text-align: end;
 }
 
-.back {
-  cursor: pointer;
-}
-
-.cancel-btn,
-.create-btn {
-  text-decoration: none;
-  background-color: rgba(63, 210, 139, 1);
-  color: rgba(31, 40, 52, 1);
-  font-size: 14px;
-  border: none;
-  padding: 5px 19px;
-  font-family: inherit;
-  border-radius: 2px;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.24);
+.cancel-btn {
   margin-right: 16px;
-  cursor: pointer;
-}
-
-.disable {
-  background-color: #3d8373;
-  color: #303f50;
 }
