modified fonts and create user form

--- a/angular/quantum-angular/src/app/login-form/login-form.component.html
+++ b/angular/quantum-angular/src/app/login-form/login-form.component.html
@@ -9,12 +9,13 @@
         <div class="pass">
             <div class="inp">
                 <input type="password" name="pass" id="pass" placeholder="Password*">
-                <img src="../../assets/img/preview.svg" >
+                <img src="../../assets/img/preview.svg">
             </div>
             <a routerLink="#">FORGOT PASSWORD?</a>
         </div>
         <div class="check">
-            <input type="checkbox" name="remember"><p>Remember Me</p>
+            <input type="checkbox" name="remember">
+            <p>Remember Me</p>
         </div>
         <div class="btn-container">
             <button class="btn" (click)="auth()">LOG IN</button>
