--- a/angular/quantum-angular/src/styles.scss
+++ b/angular/quantum-angular/src/styles.scss
@@ -1,15 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap");
 
-*{
-    margin: 0px;
-    padding: 0px;
-    font-weight: 500;
+* {
+  margin: 0px;
+  padding: 0px;
 }
-body{
-    height: 100%;
-    width: 100%;
-    font-family: Quicksand;
-    background-color: #EEEEEE;
+body {
+  height: 100%;
+  width: 100%;
+  font-family: Quicksand;
+  background-color: #eeeeee;
 }
-
